force-app/main/default/objects/Template_Task__c/Template_Task__c.object-meta.xml
<CustomObject>
    <description>An object that details particular steps in reference to a template, a template which outlines roles in steps called tasks.</description>
    <label>Template Task</label>
    <nameField>
        <label>Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>