force-app/main/default/objects/Template_Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox field to indicate the status of a task. Completed or incomplete.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>