force-app/main/default/objects/Template_Task__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>A field to show the estimated completion date of a task based on it&apos;s relevant days to complete.</description>
    <formula>Journey__r.Onboarding_Start_Date__c + Relative_Days_To_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>