force-app/main/default/objects/Template_Task__c/fields/Relative_Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Relative_Days_To_Complete__c</fullName>
    <description>A field representing the number of days to complete a template task.</description>
    <label>Relative Days To Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>