force-app/main/default/objects/Template_Task__c/validationRules/Only_Include_Postive_Integer_From_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Include_Postive_Integer_From_One</fullName>
    <active>true</active>
    <description>A rule that only allows the input of positive integers, from one onwards.</description>
    <errorConditionFormula>Relative_Days_To_Complete__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Relative_Days_To_Complete__c</errorDisplayField>
    <errorMessage>Relative days to complete cannot be less than 1.</errorMessage>
</ValidationRule>